--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,9 @@
         {% for task in tasks %}
             <li>
                 {{ task.description }}
-
+                <form action="{{ url_for('delete', id=task.id) }}" method="post" style="display: inline;">
+                    <button type="submit">Supprimer</button>
+                </form>
             </li>
         {% endfor %}
     </ul>
