--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>ToDo List</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         {% for task in tasks %}
             <li>
                 {{ task.description }}
-                <form action="{{ url_for('delete', id=task.id) }}" method="post" style="display: inline;">
+                <form action="{{ url_for('delete', id=task.id) }}" method="get" style="display: inline;">
                     <button type="submit">Supprimer</button>
                 </form>
             </li>
